_sass/docs.scss
$tie-blue: #4a90e290;
.example {
  border: 2px solid $tie-blue;
  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
  .source {
    padding: 5px 20px;
    border-top: 2px solid $tie-blue;
    background-color: #f2f2f2;
    white-space: pre;
    overflow-x: auto;
  }
}

.highlight {
  background-color: unset;
}

.example figure {
  margin: 0;
}

.scss-var {
  color: red;
  @extend .no-wrap;
}

.variable-table tr td:nth-child(1) {
  @extend .scss-var;
}

hr {
  border-color: $tie-blue;
}

.source code {
  font-size: 1.4rem;
}

.docs-table {
  display: block;
  width: 100%;
  overflow-x: auto;
  @include phone {
    font-size: 1.2rem;
  }
  @include tablet {
    font-size: unset;
  }
}

.callout {
  &:before {
    padding: 2px 5px;
    position: absolute;
    font-size: 0.8rem;
    bottom: 100%;
    margin-left: -11px;
  }
  padding: 5px 10px;
  margin-top: 58px;
  width: 100%;
  @include desktop {
    width: 75%;
  }
}
.callout-warning {
  &:before {
    background-color: #ffd11a;
    border: 1px solid #e6b800;
    content: 'NOTE';
    border-bottom: none;
  }
  background-color: #fff0b3;
  border: 1px solid #e6b800;
}
.callout-info {
  &:before {
    background-color: #3273dc;
    border: 1px solid #1e55ae;
    content: 'INFO';
    border-bottom: none;
    color: white;
  }
  background-color: #a8c4f0;
  border: 1px solid #1e55ae;
}
.navbar-logo {
  margin-left: -10px;
}

.structured-html ul {
  padding-inline-start: 20px;
}

